6.4 ShapeCollector test added